# gridlook

./: .gitignore  CHANGELOG.md  package-lock.json  package.json
.github/workflows/: jupyter.yml
jupyter/: .gitignore  README.md  hatch_build.py  pyproject.toml
jupyter/gridlook_jupyter/: __init__.py  config.py  extension.py  handlers.py  hive.py
jupyter/jupyter-config/jupyter_server_config.d/: gridlook_jupyter.json
jupyter/tests/: conftest.py  test_extension.py  test_hive.py  test_proxy.py
src/lib/layers/: devVectorSample.ts  geojson.ts  geojsonPolygons.ts  gpuProjectedPolygons.ts  vectorChoropleth.ts  vectorLayerFormats.ts  vectorPicking.ts
src/lib/layers/glsl/: gpuProjectedPolygon.frag.glsl  gpuProjectedPolygon.vert.glsl
src/lib/morton/: coverage.ts  decimal.ts  hive.ts  manifest.ts  word.ts
src/store/: paramStore.ts  store.ts  useUrlSync.ts  vectorLayerParams.ts
src/ui/common/: useVectorLayerInjection.ts
src/ui/grids/composables/: useGridOverlays.ts  useSharedGridLogic.ts  useVectorFeatureHover.ts
src/ui/overlays/: VectorChoroplethLegend.vue  VectorHoverReadout.vue
src/ui/overlays/controls/: ChoroplethGradient.vue  DataInput.vue  LayerPanel.vue
src/utils/: proxyRewrite.ts  urlParams.ts
src/views/: GlobeView.vue
tests/unit/lib/layers/: geojsonPolygons.test.ts  vectorChoropleth.test.ts  vectorLayerFormats.test.ts  vectorPicking.test.ts
tests/unit/lib/morton/: coverage.test.ts  decimal.test.ts  hive.test.ts  manifest.test.ts  word.test.ts
tests/unit/store/: store.test.ts  vectorLayerParams.test.ts
tests/unit/ui/common/: useVectorLayerInjection.test.ts
tests/unit/utils/: proxyRewrite.test.ts
