[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridlook-jupyter"
# Static version: this fork's tags belong to upstream gridlook releases, so no hatch-vcs.
version = "0.1.0"
description = "Jupyter server extension serving the gridlook viewer with a streaming S3 byte-range proxy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Shane Grigsby", email = "refuge@rocktalus.com" }]
dependencies = [
    "jupyter-server>=2",
    "obstore>=0.10",
]

[project.optional-dependencies]
# The /gridlook/hive/ virtual store (phase 6d): moczarr opens morton-hive
# stores hub-side and fabricates the NESTED cell_ids view. Not on PyPI yet —
# the git source is the interim shape (tests run against a local checkout).
hive = [
    "moczarr @ git+https://github.com/espg/moczarr",
]
test = [
    "pytest>=8",
    "pytest-jupyter[server]>=0.10",
]

[tool.hatch.metadata]
# The [hive] extra's moczarr pin is a git direct reference until moczarr
# publishes to PyPI; drop this (and the pin's @ git+…) when it does.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gridlook_jupyter"]
# The static SPA is copied in by the build hook and is gitignored; `artifacts`
# re-includes VCS-ignored paths.
artifacts = ["gridlook_jupyter/static/**"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "gridlook_jupyter",
    "jupyter-config",
    "hatch_build.py",
    "README.md",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
